samples/_failures_safe/1761512013_55bd00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_732fb95f.c: In function ‘main’:
./samples/SAFE/__tmp_732fb95f.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
